# backend

./: pyproject.toml
controle_aluno/: apps.py  models.py  schemas.py  views.py
controle_aluno/migrations/: 0001_initial.py  0002_aluno_nome_mae.py
core/: settings.py  urls.py
