[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.4",
    "mysqlclient>=2.2.8",
    "pandas>=3.0.2",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.49",
]
